# nebulaatom

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  build.sh  conanfile.py  conanfile.txt  properties.yaml
.github/workflows/: cmake.yml  docker.yml
cmake/: FindMySQL.cmake  build_settings.cmake  conan.cmake  cpack.cmake  doxygen.cmake  files_install.cmake  find_packages.cmake  general_options.cmake  print_informations.cmake  project_config.h.cmake  version.cmake
cmake/modules/: FindMySQL.cmake  FindPoco.cmake  FindSQLite3.cmake  Findyaml-cpp.cmake
docs/: Doxyfile.in  footer.html.in  header.html.in  styles.css.in
include/: cpw_woodpecker_server.h  error_report.h  handler_factory.h  library1.h  library2.h  object_library.h  query_actions.h  route.h  woodpecker_server.h
include/Factory/: accounts_handler.h  backend_handler.h  business_handler.h  currency_handler.h  deals_handler.h  frontend_handler.h  inventories_handler.h  invoices_handler.h  null_handler.h  pays_handler.h  root_handler.h  web_handler.h
packaging/AppImage/: AppRun  generate.sh
share/: CMakeLists.txt  project.desktop.in  project.glade  project.pc.in
src/: CMakeLists.txt  common_responses.cc  common_responses.h  cpw_woodpecker_server.cc  error_report.cc  handler_factory.cc  handler_factory.h  library1.cc  library2.cc  main.cc  main.cpp  object_library.cc  query_actions.cc  query_actions.h  route.cc  route.h  woodpecker_server.cc
src/Factory/: CMakeLists.txt  accounts_handler.cc  backend_handler.cc  business_handler.cc  currency_handler.cc  deals_handler.cc  frontend_handler.cc  inventories_handler.cc  invoices_handler.cc  null_handler.cc  null_handler.h  pays_handler.cc  root_handler.cc  web_handler.cc
src/core/: CMakeLists.txt  handler_factory.cc  handler_factory.cpp  handler_factory.h  nebula_atom.cpp  nebula_atom.h  query_actions.cc  query_actions.h  server.cpp  server.h  woodpecker_server.cc  woodpecker_server.cpp  woodpecker_server.h
src/examples/: CMakeLists.txt  avanced_query.cpp  backend_api.cpp  basic_routing.cpp  cached_action.cpp  client_request.cpp  custom_error.cpp  file_operations.cpp  frontend.cpp  fullstack.cpp  hello_world.cpp  post_api.cpp  send_email.cpp  setup_headers.cpp  ssl_server.cpp  upload_file.cpp  using_methods.cpp  webserver.cpp  websocket.cpp
src/extras/: CMakeLists.txt  dynamic_elements.cc  dynamic_elements.h  file.cc  file.h  file_properties.cc  file_properties.h  http_methods.cc  http_methods.h  incorporate_filters.cc  incorporate_filters.h  security_verification.cc  security_verification.cpp  security_verification.h  session.cc  session.cpp  session.h  static_elements.cc  static_elements.cpp  static_elements.h  values_properties.cc  values_properties.cpp  values_properties.h
src/files/: CMakeLists.txt  file.cc  file.cpp  file.h  file_manager.cc  file_manager.cpp  file_manager.h  file_properties.cpp  file_properties.h
src/filters/: CMakeLists.txt  fields_filter.cpp  fields_filter.h  filter.cpp  filter.h  filters.cc  filters.h  filters_manager.cpp  filters_manager.h  general_filter.cpp  general_filter.h  group_filter.cpp  group_filter.h  identify_filter.cc  identify_filter.cpp  identify_filter.h  incorporate_filters.cc  incorporate_filters.cpp  incorporate_filters.h  iquals_filter.cpp  iquals_filter.h  join_filter.cpp  join_filter.h  like_filter.cpp  like_filter.h  list_filter.cpp  list_filter.h  range_filter.cpp  range_filter.h  set_filter.cpp  set_filter.h  sort_filter.cpp  sort_filter.h  values_filter.cpp  values_filter.h
src/functions/: CMakeLists.txt  action.cpp  action.h  cache_action.cpp  cache_action.h  email_action.cpp  email_action.h  function.cpp  function.h  functions_manager.cpp  functions_manager.h  sql_action.cpp  sql_action.h
src/handlers/: CMakeLists.txt  backend_handler.cc  backend_handler.cpp  backend_handler.h  custom_handler.cpp  custom_handler.h  frontend_handler.cc  frontend_handler.cpp  frontend_handler.h  login_handler.cc  login_handler.cpp  login_handler.h  null_handler.cc  null_handler.cpp  null_handler.h  root_handler.cc  root_handler.cpp  root_handler.h  websocket_handler.cpp  websocket_handler.h
src/http/: CMakeLists.txt  body.cpp  body.h  client.cpp  client.h  common_responses.cpp  common_responses.h  http_methods.cc  http_methods.cpp  http_methods.h  methods.cpp  methods.h  request.cpp  request.h
src/query/: CMakeLists.txt  condition.cpp  condition.h  database_manager.cc  database_manager.cpp  database_manager.h  field.cpp  field.h  parameter.cpp  parameter.h  query_actions.cc  query_actions.cpp  query_actions.h  results.cpp  results.h  row.cpp  row.h
src/security/: CMakeLists.txt  permission.cpp  permission.h  permissions_manager.cpp  permissions_manager.h  security_verification.cpp  security_verification.h  user.cpp  user.h  users_manager.cpp  users_manager.h
src/tests/: CMakeLists.txt  test_gen.cc
src/tools/: CMakeLists.txt  common_responses.cc  common_responses.h  dvalue.cpp  dvalue.h  email.cpp  email.h  file_manager.cc  file_manager.h  filters.cc  filters.h  handler_connection.cc  handler_connection.cpp  handler_connection.h  identify_filter.cc  identify_filter.h  manage_json.cc  manage_json.cpp  manage_json.h  output_logger.cpp  output_logger.h  requests_manager.cc  requests_manager.cpp  requests_manager.h  route.cc  route.cpp  route.h  row_value_formatter.cc  row_value_formatter.cpp  row_value_formatter.h  sessions_handler.cc  sessions_handler.cpp  sessions_handler.h  sessions_manager.cpp  sessions_manager.h  settings_manager.cpp  settings_manager.h
tests/: CMakeLists.txt  test_gen.cc
